# lugoh

./: .gitignore  Cargo.toml  PROGRESS.md
.github/workflows/: ci.yml
agos-core/: Cargo.toml
agos-core/src/: error.rs  evidence.rs  feature.rs  ir.rs  lib.rs  pipeline.rs  tracing.rs  types.rs  version.rs
agos-kb/: Cargo.toml
agos-kb/src/: error.rs  kb0004.rs  lib.rs  loader.rs  traits.rs  types.rs
agos-morph/: Cargo.toml
agos-morph/src/: config.rs  error.rs  lexer.rs  lib.rs  morphological_parser.rs  tokenizer.rs  unicode_validator.rs
agos-morph/tests/: pipeline_integration.rs
agos-server/: Cargo.toml
agos-server/src/: main.rs
agos-syntax/: Cargo.toml
agos-syntax/src/: config.rs  error.rs  lib.rs  syntax_parser.rs
docs/: IMPLEMENTATION-STATUS.md  TECH-STACK-RECOMMENDATION.md
docs/personal/: notes.md  prompt.md
knowledge/KB-0004/: metadata.json  noun-pos-profiles.json  stem-overrides.json  verb-pos-profiles.json
specs/: README.md  howtoread.md
specs/ADR/: ADR-0001-compiler-architecture-rationale.md  ADR-0002-grammar-bytecode-rationale.md  ADR-0003-grammar-intermediate-representation-rationale.md  ADR-0004-offline-first-rationale.md  ADR-0005-plugin-architecture-rationale.md
specs/KB/: KB-0001-roots-database.md  KB-0002-merger-analysis.md  KB-0002-wazan-database.md  KB-0003-verb-forms.md  KB-0004-noun-patterns.md  KB-0004-wazan-pattern-database.md  KB-0005-particles.md  KB-0006-pronouns.md  KB-0007-morphological-features.md  KB-0008-particles-reference.md  KB-OVERVIEW.md
specs/RFC/: RFC-0001-grammar-dsl.md  RFC-0002-grammar-bytecode-format.md  RFC-0003-grammar-virtual-machine.md  RFC-0004-arabic-grammar-rule-dsl.md
specs/SPEC/: SPEC-0101-morphology-engine.md  SPEC-0102-morphological-features.md  SPEC-0103-morphology-engine-performance-optimization-guide.md  SPEC-0201-rule-engine.md  SPEC-0301-grammar-runtime.md  SPEC-0302-gvm-instruction-set.md  SPEC-0303-gvm-implementation-guide.md  SPEC-0304-gvm-memory-model.md  SPEC-0401-knowledge-graph-engine.md  SPEC-0501-explanation-engine.md  SPEC-0601-plugin-system.md
specs/SPEC/SPEC-0001/: 01-introduction-and-scope.md  02-system-architecture-overview.md  03-compilation-pipeline-stage-by-stage.md  04-module-responsibilities-and-interfaces.md  05-data-flow-and-intermediate-representations.md  06-deployment-and-runtime-considerations.md  07-extensibility-and-plugin-architecture.md  08-security-validation-and-error-handling.md  09-performance-targets-and-constraints.md
tasks/: IMPLEMENTATION-PLAN.md  README.md
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo
web/public/: manifest.json  offline.html  sw.js
web/src/: App.vue  api.ts  main.ts  style.css  types.ts
web/src/components/: AnalyzeForm.vue  MorphologyView.vue  ResultsDisplay.vue  SyntaxTreeView.vue
