[workspace]
resolver = "2"
members = [
    "agos-core",
    "agos-kb",
    "agos-morph",
    "agos-server",
    "agos-syntax",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AGOS Architecture Committee"]
license = "MIT"
description = "AGOS — Arabic Grammar Operating System"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
