[package]
name = "agos-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AGOS Core — Shared types, error types, IR definitions, and feature bitfield encoding"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_bytes = "0.11"
thiserror.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
