[package]
name = "agos-kb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AGOS Knowledge Base — KB traits, types, loader, and runtime reader"

[dependencies]
agos-core = { path = "../agos-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
