[package]
name = "agos-morph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AGOS Morphology Engine — Arabic morphological and syntactic analysis (MOD-01 through MOD-05)"

[dependencies]
agos-core = { path = "../agos-core" }
agos-kb = { path = "../agos-kb" }
agos-syntax = { path = "../agos-syntax" }
tracing = "0.1"
unicode-normalization = "0.1"
